--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-flask==2.3.3
-flask-sqlalchemy==3.1.1
-flask-cors==4.0.0
-werkzeug==2.3.7
-pytz==2024.1
-python-dotenv==1.0.0
-requests==2.32.3
-schedule==1.2.0
-python-dateutil==2.8.2
+Flask==2.3.3
+Flask-SQLAlchemy==3.0.5
+Werkzeug==2.3.7
+requests==2.31.0
+pytz==2023.3
+APScheduler==3.10.4
+beautifulsoup4==4.12.2
+lxml==4.9.3
+
